kubernetes/quay/base/postgres/clair/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: clair-app
  namespace: quay
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: quay
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: clair
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: quay
          podSelector:
            matchLabels:
              quay-component: clair-app
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: clair-postgres
  namespace: quay
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: quay
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: clair
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: quay
          podSelector:
            matchLabels:
              postgres-operator.crunchydata.com/cluster: clair
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: quay
          podSelector:
            matchLabels:
              postgres-operator.crunchydata.com/cluster: clair
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: clair-allow-truenas-egress
  namespace: quay
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/instance: quay
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: clair
  egress:
    - to:
        - ipBlock:
            cidr: 10.101.1.6/32
    - to:
        - ipBlock:
            cidr: 10.101.1.7/32
    - to:
        - ipBlock:
            cidr: 10.101.10.7/32
      ports:
        - protocol: TCP
          port: 9000
        - protocol: TCP
          port: 443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: clair-pgdump-ingress
  namespace: quay
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: quay
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: clair
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: postgres
          podSelector:
            matchLabels:
              app: pgdump-cron
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: clair-pgadmin-ingress
  namespace: quay
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: quay
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: clair
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: postgres
          podSelector:
            matchLabels:
              postgres-operator.crunchydata.com/pgadmin: pgadmin
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-openshift-ingress-psql-clair
  namespace: quay
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: clair
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress
      ports:
        - protocol: TCP
          port: 443 # Passthrough/ReEncrypt Termination
        - protocol: TCP
          port: 80 # Edge Termination
